tests/prsl/fixtures/invalid/bad-retention.prsl
begin-record
record bad-retention {
  content : "x";
  retention-policy : bogus-keyword;
}
end-record
---
